tests/invalid_nodepend/require_tailrec_invalid.err_exp
require_tailrec_invalid.m:019: Error: `:- pragma require_tail_recursion'
require_tailrec_invalid.m:019:   declaration in module interface.
require_tailrec_invalid.m:026: Error: `:- pragma require_tail_recursion' pragma
require_tailrec_invalid.m:026:   for `non_existent_pred'/3 without
require_tailrec_invalid.m:026:   corresponding `:- pred' or `:- func'
require_tailrec_invalid.m:026:   declaration.
require_tailrec_invalid.m:027: Error: `:- pragma require_tail_recursion' pragma
require_tailrec_invalid.m:027:   for predicate `non_existent_proc'/2 without
require_tailrec_invalid.m:027:   corresponding `:- pred' declaration.
require_tailrec_invalid.m:028: Error: `:- pragma require_tail_recursion' pragma
require_tailrec_invalid.m:028:   for function `non_existent_func_proc'/1
require_tailrec_invalid.m:028:   without corresponding `:- func' declaration.
require_tailrec_invalid.m:031: Error: `:- pragma require_tail_recursion'
require_tailrec_invalid.m:031:   declaration for undeclared mode of predicate
require_tailrec_invalid.m:031:   `require_tailrec_invalid.length'/2.
require_tailrec_invalid.m:034: Error: conflicting
require_tailrec_invalid.m:034:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:034:   `error' conflicts with earlier attribute
require_tailrec_invalid.m:034:   `warn'.
require_tailrec_invalid.m:037: Error: conflicting
require_tailrec_invalid.m:037:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:037:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:037:   `warn'.
require_tailrec_invalid.m:040: Error: conflicting
require_tailrec_invalid.m:040:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:040:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:040:   `error'.
require_tailrec_invalid.m:044: Error: conflicting
require_tailrec_invalid.m:044:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:044:   `self_recursion_only' conflicts with earlier
require_tailrec_invalid.m:044:   attribute `self_or_mutual_recursion'.
require_tailrec_invalid.m:047: Error: conflicting
require_tailrec_invalid.m:047:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:047:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:047:   `self_or_mutual_recursion'.
require_tailrec_invalid.m:051: Error: conflicting
require_tailrec_invalid.m:051:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:051:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:051:   `self_recursion_only'.
require_tailrec_invalid.m:055: Error: unrecognised
require_tailrec_invalid.m:055:   `:- pragma require_tail_recursion' attribute:
require_tailrec_invalid.m:055:   `blahblahblah'.
require_tailrec_invalid.m:059: Error: `:- pragma require_tail_recursion' pragma
require_tailrec_invalid.m:059:   for predicate `blahblahblah'/0 without
require_tailrec_invalid.m:059:   corresponding `:- pred' declaration.
require_tailrec_invalid.m:061: In the second argument of
require_tailrec_invalid.m:061:   `:- pragma require_tail_recursion'
require_tailrec_invalid.m:061:   declaration:
require_tailrec_invalid.m:061:   error: expected attribute list, got `Woop'.
require_tailrec_invalid.m:064: In the second argument of
require_tailrec_invalid.m:064:   `:- pragma require_tail_recursion'
require_tailrec_invalid.m:064:   declaration:
require_tailrec_invalid.m:064:   error: expected attribute list, got `23'.
require_tailrec_invalid.m:071: Error: conflicting
require_tailrec_invalid.m:071:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:071:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:071:   `self_recursion_only'.
require_tailrec_invalid.m:071: Error: conflicting
require_tailrec_invalid.m:071:   `:- pragma require_tail_recursion' attributes:
require_tailrec_invalid.m:071:   `none' conflicts with earlier attribute
require_tailrec_invalid.m:071:   `warn'.
require_tailrec_invalid.m:072: Error: unrecognised
require_tailrec_invalid.m:072:   `:- pragma require_tail_recursion' attribute:
require_tailrec_invalid.m:072:   `grasshopper'.
require_tailrec_invalid.m:077: Error: conflicting
require_tailrec_invalid.m:077:   `:- pragma require_tail_recursion' pragmas for
require_tailrec_invalid.m:077:   `require_tailrec_invalid.length10'/2 or one of
require_tailrec_invalid.m:077:   its modes.
require_tailrec_invalid.m:075:   Earlier pragma is here.
require_tailrec_invalid.m:080: Error: conflicting
require_tailrec_invalid.m:080:   `:- pragma require_tail_recursion' pragmas for
require_tailrec_invalid.m:080:   `require_tailrec_invalid.length10'/2 or one of
require_tailrec_invalid.m:080:   its modes.
require_tailrec_invalid.m:075:   Earlier pragma is here.
require_tailrec_invalid.m:094: Error: conflicting
require_tailrec_invalid.m:094:   `:- pragma require_tail_recursion' pragmas for
require_tailrec_invalid.m:094:   `require_tailrec_invalid.append'/3 or one of
require_tailrec_invalid.m:094:   its modes.
require_tailrec_invalid.m:092:   Earlier pragma is here.
require_tailrec_invalid.m:094: Error: conflicting
require_tailrec_invalid.m:094:   `:- pragma require_tail_recursion' pragmas for
require_tailrec_invalid.m:094:   `require_tailrec_invalid.append'/3 or one of
require_tailrec_invalid.m:094:   its modes.
require_tailrec_invalid.m:093:   Earlier pragma is here.
